name:                repo-complexity-analyzer
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/ShifanGu/repo-complexity-analyzer#readme
license:             BSD3
license-file:        LICENSE
author:              Shifan Gu
maintainer:          shgu@tcd.ie
copyright:           2016
category:            test
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , RestClient
  build-depends:       base >= 4.7 && < 5
                     , argon
                     , docopt
                     , pipes
                     , pipes-safe
                     , process
                     , aeson
                     , servant
                     , servant-server
                     , servant-client
                     , transformers
                     , wai
                     , warp
                     , wai-logger
                     , mongoDB
                     , hslogger
                     , time
                     , bson-generic
                     , resourcet
                     , text
                     , bytestring
                     , bson
                     , mtl
                     , http-client
                     , directory
                     , filepath
                     , split
                     , HTTP
                     , repo-complexity-lib
  default-language:    Haskell2010

executable repo-complexity-analyzer
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , repo-complexity-analyzer
  default-language:    Haskell2010

test-suite use-haskell-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , use-haskell
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/ShifanGu/repo-complexity-analyzer
